tests/compiler/errors/propagate_error_incompatible_return.casa
# expect: TYPE_MISMATCH
import "std"

fn bad -> str {
    42 Option::Some ?
}
